# Taxbot-Ghana-with-RAG

./: .env.example  .gitignore  AGENTS.md  README.md  TaxBotSKILL.md  core.py  pyproject.toml  requirements.txt  server.py  taxbot.py  vercel.json
api/: chat.py  clear.py  command.py  core.py  utils.py
chroma_db/: chroma.sqlite3
knowledge_base/: build_kb_chunks.py  chunks_kb.json  embed_kb_chunks.py  embedded_kb.json  ghana_msme_tax_knowledge_base.json  ingest_chroma.py  kb_chunks.json  kb_index.json  retriever.py  strip_kb.py  stripped_kb.md
knowledge_base/legacy_pdf_pipeline/: chunk_kb.py  embed_kb.py  verification_report.md
public/: index.html
sessions/: session_2026-05-22_12-01-13.json
